fixing spacing

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,7 +1,7 @@
 footer {
 	position: relative;
 	background-color: #e5e5e5;
-	padding-bottom: 20px;
+	padding: 0 10px 20px;
 
 	.footer-content {
 		display: flex;
@@ -17,6 +17,7 @@ footer {
 		width: 100%;
 		height: 70px;
 		top: -70px;
+		left: 0;
 	}
 
 	.legal {
